--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">LabPixel</string>
+    <string name="edit_image_button">Modifier l'image</string>
+    <string name="view_projects_button">Voir les projets</string>
+    <string name="settings_button">Paramètres</string>
+    <string name="app_description">Application de modification d'image et de gestion de projets.</string>
+    <string name="welcome_message">Bienvenue dans LabPixel !</string>
+    <!-- Ajoute ici d'autres chaînes en français -->
 </resources>
+
