--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Description de l'application -->
     <string name="app_name">LabPixel</string>
-    <string name="edit_image_button">Modifier l'image</string>
+    <string name="app_description">Mon application &amp; super !</string>
+    
+    <!-- Boutons -->
+    <string name="edit_image_button">Éditer l'image</string>
     <string name="view_projects_button">Voir les projets</string>
     <string name="settings_button">Paramètres</string>
-    <string name="app_description">Application d'edition graphique.</string>
-    <string name="welcome_message">Bienvenue dans LabPixel !</string>
-    <!-- Ajoute ici d'autres chaînes en français -->
+
+    <!-- Autres chaînes -->
+    <string name="welcome_message">Bienvenue sur LabPixel, éditeur d'images puissant et facile à utiliser !</string>
+    <string name="app_version">Version 1.0</string>
 </resources>
 
