--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,15 +2,15 @@
 <resources>
     <!-- Description de l'application -->
     <string name="app_name">LabPixel</string>
-    <string name="app_description">Mon application &amp; super !</string>
-    
+    <string name="app_description">Mon application &amp; outil de design</string>
+
     <!-- Boutons -->
     <string name="edit_image_button">Éditer l'image</string>
     <string name="view_projects_button">Voir les projets</string>
     <string name="settings_button">Paramètres</string>
 
     <!-- Autres chaînes -->
-    <string name="welcome_message">Bienvenue sur LabPixel, éditeur d'images puissant et facile à utiliser !</string>
+    <string name="welcome_message">Bienvenue sur LabPixel</string>
     <string name="app_version">Version 1.0</string>
 </resources>
 
