--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <!-- Description de l'application -->
     <string name="app_name">LabPixel</string>
-    <string name="app_description">Mon application &amp; outil de design</string>
+    <string name="app_description">Mon application d'édition d'image simple et puissante</string>
 
     <!-- Boutons -->
     <string name="edit_image_button">Éditer l'image</string>
@@ -10,7 +10,7 @@
     <string name="settings_button">Paramètres</string>
 
     <!-- Autres chaînes -->
-    <string name="welcome_message">Bienvenue sur LabPixel</string>
+    <string name="welcome_message">Bienvenue sur LabPixel !</string>
     <string name="app_version">Version 1.0</string>
 </resources>
 
