--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,15 @@
-<?xm  version="1.0" encoding="utf-8"?>
-< resources>
-    <string name=app_name>LabPixel</string>
-    <string name=app_description>Mon application de retouche photo</string>
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+    <string name="app_name">LabPixel</string>
+    <string name="app_description">Mon application de retouche photo</string>
 
+    <!-- Boutons -->
+    <string name="edit_image_button">Éditer l'image</string>
+    <string name="view_projects_button">Voir les projets</string>
+    <string name="settings_button">Paramètres</string>
 
-    < Boutons>
-    <string name=edit_image_button>Éditer l'image</string>
-    <string name=view_projects_button>Voir les projets</string>
-    <string name=settings_button>Paramètres</string>
-
-    < Autres chaînes>
-    <string name=welcome_message>Bienvenue sur LabPixel !</string>
-    <string name=app_version>Version 1.0</string>
+    <!-- Autres chaînes -->
+    <string name="welcome_message">Bienvenue sur LabPixel</string>
+    <string name="app_version">Version 1.0</string>
 </resources>
+
