--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">LabPixel</string>
-    <string name="app_description">Mon application de retouche photo</string>
+    <string name="app_description">Mon application de design</string>
 
     <!-- Boutons -->
     <string name="btn_edit_image">Éditer l'image</string>
@@ -12,3 +12,4 @@
     <string name="welcome_message">Bienvenue sur LabPixel</string>
     <string name="app_version">Version 1.0</string>
 </resources>
+
